--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alexistoranzo/react-chat-bot",
-  "version": "0.1.19",
+  "version": "0.1.20",
   "keywords": [
     "react",
     "components",
@@ -17,10 +17,11 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "@babel/cli": "7.21.0",
+    "@babel/preset-react": "^7.18.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@babel/cli": "7.21.0",
-    "@babel/preset-react": "^7.18.6"
+    "@babel/preset-env": "^7.21.4"
   },
   "peerDependencies": {
     "@emotion/react": ">=11.10.6",
