--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alexistoranzo/react-chat-bot",
-  "version": "0.1.20",
+  "version": "0.1.21",
   "keywords": [
     "react",
     "components",
@@ -15,6 +15,10 @@
     "README.md"
   ],
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexistoranzoar/react-chat-bot.git"
+  },
   "dependencies": {},
   "devDependencies": {
     "@babel/cli": "7.21.0",
