--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alexistoranzo/react-chat-bot",
-  "version": "0.1.21",
+  "version": "0.1.23",
   "keywords": [
     "react",
     "components",
@@ -19,13 +19,13 @@
     "type": "git",
     "url": "https://github.com/alexistoranzoar/react-chat-bot.git"
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "7.21.0",
+    "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@babel/preset-env": "^7.21.4"
+    "react-scripts": "^5.0.1"
   },
   "peerDependencies": {
     "@emotion/react": ">=11.10.6",
@@ -37,7 +37,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "prepublish": "npm run build",
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
